modified reducer declaration

--- a/parallel_code/Makefile
+++ b/parallel_code/Makefile
@@ -1,7 +1,7 @@
 CC=icc
 
 pbfs: pbfs.cpp bag.cpp pennant.cpp
-	$(CC) -o pbfs pbfs.cpp bag.cpp pennant.cpp
+	$(CC) -Wall -Werror -03 -o pbfs pbfs.cpp bag.cpp pennant.cpp
 
 clean:
 	rm *.o pbfs
