--- a/parallel_code/Makefile
+++ b/parallel_code/Makefile
@@ -1,5 +1,7 @@
 CC=icc
 
+all: pbfs-sorted pbfs-unsorted
+
 pbfs-sorted: pbfs.cpp bag.cpp pennant.cpp
 	$(CC) -o pbfs pbfs-sorted.cpp bag.cpp pennant.cpp
 
