--- a/parallel_code/Makefile
+++ b/parallel_code/Makefile
@@ -2,11 +2,11 @@ CC=icc
 
 all: pbfs-sorted pbfs-unsorted
 
-pbfs-sorted: pbfs.cpp bag.cpp pennant.cpp
-	$(CC) -o pbfs pbfs-sorted.cpp bag.cpp pennant.cpp
+pbfs-sorted: pbfs-sorted.cpp bag.cpp pennant.cpp
+	$(CC) -o pbfs-sorted pbfs-sorted.cpp bag.cpp pennant.cpp
 
-pbfs-unsorted: pbfs.cpp bag.cpp pennant.cpp
-	$(CC) -o pbfs pbfs-unsorted.cpp bag.cpp pennant.cpp
+pbfs-unsorted: pbfs-unsorted.cpp bag.cpp pennant.cpp
+	$(CC) -o pbfs-unsorted pbfs-unsorted.cpp bag.cpp pennant.cpp
 
 clean:
 	rm  pbfs-sorted pbfs-unsorted
